Created overloading method findChatsByUserId() in UserMessageChatRepository interface

--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -43,6 +43,7 @@
     </nav>
 
     <!-- Sidebar -->
+    <!-- This sidebar will show each conversation the logged in user has -->
     <div id="sidebar-wrapper" class="toggled">
         <ul class="sidebar-nav">
             <li>
