--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -49,7 +49,7 @@
                                 (For-Testing)</a>
                         </li>
                         <li>
-                            <a data-toggle="modal" data-target="#inviteIndividualModal">Invite Individual To Chatr</a>
+                            <a data-toggle="modal" data-target="#inviteIndividualModal">Invite Individual To Chat</a>
                         </li>
                     </ul>
                 </li>
