Improving the look of home screen page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,9 @@
       xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="fragment/top" th:remove="tag">
 </th:block>
-<div>Welcome to the mesaging service</div>
+<div class="jumbotron">
+    <h1>Welcome to the messaging service!</h1>
+    <p>Have an account? Click "Log in" above!</p>
+</div>
 <th:block th:replace="fragment/bottom" th:remove="tag">
 </th:block>
