--- a/src/main/resources/templates/fragment/bottom.html
+++ b/src/main/resources/templates/fragment/bottom.html
@@ -1,14 +1,35 @@
 <div xmlns:th="http://www.w3.org/1999/xhtml" th:remove="tag">
 
-<div class="footer navbar navbar-inner navbar-static-bottom text-center">
-    <footer id="footer">
-        Copyright @2015 Messaging System
-        <ul class="list-inline">
-            <li><a th:href="@{/content/faq}">FAQ</a></li>
-            <li><a th:href="@{/content/contactus}">Contact Us</a></li>
-        </ul>
+    <!--<div class="footer navbar navbar-inner navbar-static-bottom text-center">-->
+    <!--<footer id="footer">-->
+    <!--Copyright @2016 Messaging System-->
+    <!--<ul class="list-inline">-->
+    <!--<li><a th:href="@{/content/faq}">FAQ</a></li>-->
+    <!--<li><a th:href="@{/content/contactus}">Contact Us</a></li>-->
+    <!--</ul>-->
+    <!--</footer>-->
+    <!--</div>-->
+
+    <footer class="footer text-center navbar navbar-default">
+        <div class="container">
+            <p class="text-muted">Copyright @2016 Messaging System</p>
+            <ul class="list-inline">
+                <li><a th:href="@{/content/faq}">FAQ</a></li>
+                <li><a th:href="@{/content/contactus}">Contact Us</a></li>
+            </ul>
+        </div>
     </footer>
-</div>
-</body>
-</html>
+
+    <!--<div class="footer navbar navbar-inner navbar-static-bottom text-center">-->
+        <!--<footer id="footer">-->
+            <!--Copyright @2016 Messaging System-->
+            <!--<ul class="list-inline">-->
+                <!--<li><a th:href="@{/content/faq}">FAQ</a></li>-->
+                <!--<li><a th:href="@{/content/contactus}">Contact Us</a></li>-->
+            <!--</ul>-->
+        <!--</footer>-->
+    <!--</div>-->
+
+    </body>
+    </html>
 </div>
