Improved sidebar style, still needs improvements though

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-2 col-md-offset-5">
-            <form class="col-md-12" th:action="@{/login}" method="POST">
+            <form id="loginForm" class="col-md-12" th:action="@{/login}" method="POST">
                 <div class="form-group">
                     <input id="username" name="username" type="text" class="form-control input-lg" placeholder="Email">
                 </div>
