--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -1,4 +1,3 @@
-
 .ui-autocomplete {
     position: absolute;
     top: 100%;
@@ -132,5 +131,9 @@ body {
     border-radius: 4px;
     box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
     box-sizing: border-box;
+}
+
+#createAccount {
+    text-align: center;
 }
 
