--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,17 +16,13 @@
                            placeholder="Password">
                 </div>
                 <div class="form-group">
-                    <input id="confirmPass" name="confirmPass" type="password" class="form-control input-lg"
-                           placeholder="Confirm Password">
-                </div>
-                <div class="form-group">
                     <button class="btn btn-primary btn-lg btn-block">Sign In</button>
                 </div>
             </form>
         </div>
         <div class="row">
-            <div class="col-md-2 col-md-offset-5">
-                <a th:href="@{/register/index}">Dont have an account? Create one.</a>
+            <div id="createAccount" class="col-md-2 col-md-offset-5">
+                <a th:href="@{/register/index}">Don't have an account? Create one.</a>
             </div>
         </div>
     </div>
