--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,12 @@
     <div class="col-md-6 col-md-offset-3">
         <div class="jumbotron" id="jumbotron-home">
             <h1>Welcome to the <br>Messaging System</h1>
-            <p>Have an account? Click "Log in" above!</p>
+            <hr>
+            <p>Have an account? Click <code>Log in</code> above!</p>
         </div>
+    </div>
+    <div id="createAccount" class="col-md-6 col-md-offset-3">
+        <p>Don't have an account? <a th:href="@{/register/index}">Create one.</a></p>
     </div>
 </div>
 <th:block th:replace="fragment/bottom" th:remove="tag">
