--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -7,7 +7,7 @@
         <title th:text="'Hi ' + ${user.firstName}"></title>
     </head>
     <body>
-    <nav class="navbar navbar-default" role="navigation" xmlns="http://www.w3.org/1999/xhtml">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" xmlns="http://www.w3.org/1999/xhtml">
         <div class="navbar-header">
 
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -27,7 +27,8 @@
                                 class="caret"></strong></a>
                     <ul class="dropdown-menu">
                         <li ng-repeat="invite in invitations">
-                            <a ng-click="setCurrentInvite(invite)" data-toggle="modal" data-target="#invitationModal">{{invite.username}}
+                            <a ng-click="setCurrentInvite(invite)" data-toggle="modal"
+                               data-target="#invitationModal">{{invite.username}}
                                 Wants To
                                 Chat</a>
                         </li>
@@ -49,19 +50,15 @@
                                 (For-Testing)</a>
                         </li>
                         <li>
-                            <a data-toggle="modal" data-target="#inviteIndividualModal">Invite Individual To Chat</a>
+                            <a data-toggle="modal" data-target="#inviteIndividualModal">Invite Individual To
+                                Chat</a>
                         </li>
                     </ul>
                 </li>
-
-
                 <li>
                     <a th:href="@{/logout}">Logout</a>
                 </li>
-
-
             </ul>
         </div>
-
     </nav>
 
