--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -124,6 +124,7 @@ body {
     bottom: 0;
     min-height: 50%;
     max-height: calc(100% - 80px);
+    max-width: 200px;
     overflow: auto;
     padding: 20px;
     background-color: #f5f5f5;
