--- a/src/main/resources/templates/fragment/top.html
+++ b/src/main/resources/templates/fragment/top.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 
-    <nav class="navbar navbar-default" role="navigation" xmlns="http://www.w3.org/1999/xhtml"
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" xmlns="http://www.w3.org/1999/xhtml"
          xmlns:th="http://www.thymeleaf.org">
         <div class="navbar-header">
 
