--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -43,6 +43,7 @@
                 </form>
             </div>
         </div>
+        <!-- end Add Team Modal -->
 
         <!-- Add Invite Modal -->
         <div id="invitePersonModal" class="modal fade" role="dialog">
@@ -73,6 +74,7 @@
                 </form>
             </div>
         </div>
+        <!-- end Add Invite Modal -->
 
 
         <!-- Add Invite Modal -->
@@ -99,6 +101,7 @@
                 </form>
             </div>
         </div>
+        <!-- end Add Invite Modal -->
 
 
         <!-- Add Invite Modal -->
@@ -126,6 +129,7 @@
                 </form>
             </div>
         </div>
+        <!-- end Add Invite Modal -->
 
         <!-- Accept Invitation Modal-->
         <div id="invitationModal" class="modal fade" role="dialog">
@@ -155,39 +159,66 @@
                 </form>
             </div>
         </div>
+        <!-- end Accept Invitation Modal-->
 
 
-        <!-- Messages exchanged between two users -->
         <div class="row">
-            <div class="text-center" ng-repeat="message in messages">
-                From: {{message.fromFirstName}}
-                To: {{message.toFirstName}}
-                Timestamp: {{message.timeOfMessage}}
-                Message: {{message.message}}
-                <div ng-if="message.fileName != 'null'">Attached Files: <a
-                        ng-attr-href="/user/download/file/?fileName={{message.fileName}}">{{message.fileName}}</a>
+
+            <!-- Messages column -->
+            <div class="col-md-6 col-md-offset-2">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="page-header">
+                            <h1>Name
+                                <small>Messages</small>
+                            </h1>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <form th:action="@{/user/message/individual-message/insert}" th:method="POST" class="form-horizontal"
-                      enctype="multipart/form-data">
-                    <label class="control-label">Enter Message:</label>
-                    <input style="display: none" ng-value="currentUserId" type="text" id="toUserId" name="toUserId">
-                    <div class="input-group">
-                        <input ng-model="currentMessage" type="text" class="form-control" id="message" name="message">
+                <!-- Messages exchanged between two users -->
+                <div class="row" ng-repeat="message in messages">
+                    <div class="col-md-6">
+                        <div class="page-header">
+                            <h1>{{message.fromFirstName}}
+                                <small>{{message.timeOfMessage}}</small>
+                            </h1>
+                        </div>
+                        <!--To: {{message.toFirstName}}-->
+                        <!--Timestamp: {{message.timeOfMessage}}-->
+                        {{message.message}}
+                        <div ng-if="message.fileName != 'null'">Attached Files: <a
+                                ng-attr-href="/user/download/file/?fileName={{message.fileName}}">{{message.fileName}}</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Send message -->
+                <div class="row">
+                    <div class="col-md-6">
+                        <form th:action="@{/user/message/individual-message/insert}" th:method="POST"
+                              class="form-horizontal"
+                              enctype="multipart/form-data">
+                            <label class="control-label">Enter Message:</label>
+                            <input style="display: none" ng-value="currentUserId" type="text" id="toUserId"
+                                   name="toUserId">
+                            <div class="input-group">
+                                <input ng-model="currentMessage" type="text" class="form-control" id="message"
+                                       name="message">
                         <span class="input-group-btn"><button type="submit" class="btn btn-default">Send! To
                             {{currentName}}
                         </button></span>
-                    </div>
+                            </div>
 
-                    <div class="text-center"><a ng-click="showFileUpload = !showFileUpload">Add file</a>
-                        <input ng-show="showFileUpload" type="file" name="fileUpload" id="fileUpload">
+                            <div class="text-center"><a ng-click="showFileUpload = !showFileUpload">Add file</a>
+                                <input ng-show="showFileUpload" type="file" name="fileUpload" id="fileUpload">
+                            </div>
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
+            <!-- end Messages column -->
+
         </div>
     </div>
 </div>
