Messages are looking nicer

--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -178,8 +178,8 @@
 
                 <!-- Messages exchanged between two users -->
                 <div class="row" ng-repeat="message in messages">
-                    <div class="col-md-6">
-                        <div class="page-header">
+                    <div class="col-md-12">
+                        <div class="page-header message-header">
                             <h1>{{message.fromFirstName}}
                                 <small>{{message.timeOfMessage}}</small>
                             </h1>
