Showing a prettier format to the message time

--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -181,7 +181,7 @@
                     <div class="col-md-12">
                         <div class="page-header message-header">
                             <h1>{{message.fromFirstName}}
-                                <small>{{message.timeOfMessage}}</small>
+                                <small>{{message.prettyTime}}</small>
                             </h1>
                         </div>
                         <!--To: {{message.toFirstName}}-->
