--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -23,12 +23,12 @@
 <!-- /#sidebar-wrapper -->
 
 <div id="page-content-wrapper">
-    <div class="container-fluid">    <!-- Add Team Modal -->
+    <div class="container-fluid">
         <div id="createTeamModal" class="modal fade" role="dialog">
             <div class="modal-dialog">
 
                 <!-- Modal content-->
-                <form th:action="@{user/team/create}" th:method="PUT" enctype="multipart/form-data">
+                <form th:action="@{team/create}" th:method="PUT" enctype="multipart/form-data">
 
                     <div class="modal-content">
                         <div class="modal-header">
@@ -42,7 +42,7 @@
                             <input type="text" class="form-control" id="teamDescription" name="teamDescription">
                         </div>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-default">Create Team:</button>
+                            <button type="submit" class="btn btn-default">Create Team</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
             <div class="modal-dialog">
 
                 <!-- Modal content-->
-                <form th:action="@{user/team/addUser}" th:method="PUT" enctype="multipart/form-data">
+                <form th:action="@{/team/add/user}" th:method="PUT" enctype="multipart/form-data">
 
                     <div class="modal-content">
                         <div class="modal-header">
@@ -139,6 +139,35 @@
             </div>
         </div>
 
+
+        <div id="sendTeamMessage" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+
+                <!-- Modal content-->
+                <form th:action="@{team/message/insert}" th:method="PUT"
+                      enctype="multipart/form-data">
+
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Send message to a team</h4>
+                        </div>
+                        <div class="modal-body">
+                            <label class="control-label">Enter To team Id:</label>
+                            <input type="text" class="form-control" id="toTeamId" name="toTeamId">
+                            <label class="control-label">Enter Message:</label>
+                            <input type="text" class="form-control" id="message" name="message">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-default">Send</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+
         <!-- Accept Invitation Modal-->
         <div id="invitationModal" class="modal fade" role="dialog">
             <div class="modal-dialog">
@@ -180,6 +209,14 @@
                 <div ng-if="message.fileName != 'null'">Attached Files: <a
                         ng-attr-href="/user/download/file/?fileName={{message.fileName}}">{{message.fileName}}</a>
                 </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="text-center" ng-repeat="msg in teammessages">
+                From:{{msg.fromUserId}}
+                Message: {{ msg.message }}
+
             </div>
         </div>
 
