--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -35,9 +35,28 @@
                 </li>
 
                 <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-cloak>Team ({{teaminvitations.length}})<strong
+                            class="caret"></strong></a>
+                    <ul class="dropdown-menu">
+                        <li ng-repeat="invite in teaminvitations">
+                            <a ng-click="setCurrentInvite(invite)" data-toggle="modal" data-target="#invitationModal">{{invite.username}}
+                                Wants To
+                                Chat</a>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Actions<strong
                             class="caret"></strong></a>
                     <ul class="dropdown-menu">
+                        <li>
+                            <a data-toggle="modal" data-target="#sendIndividualMessage">Send Individual Message
+                                (For-Testing)</a>
+                        </li>
+                        <li>
+                            <a data-toggle="modal" data-target="#inviteIndividualModal">Invite Individual To Chat</a>
+                        </li>
                         <li>
                             <a data-toggle="modal" data-target="#createTeamModal">Create Team</a>
                         </li>
@@ -45,11 +64,8 @@
                             <a data-toggle="modal" data-target="#invitePersonModal">Invite Person To Team</a>
                         </li>
                         <li>
-                            <a data-toggle="modal" data-target="#sendIndividualMessage">Send Individual Message
-                                (For-Testing)</a>
-                        </li>
-                        <li>
-                            <a data-toggle="modal" data-target="#inviteIndividualModal">Invite Individual To Chat</a>
+                            <a data-toggle="modal" data-target="#sendTeamMessage">Send Team Message
+                                (For test purpose)</a>
                         </li>
                     </ul>
                 </li>
