--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -36,7 +36,7 @@
                             <input type="text" class="form-control" id="teamDescription" name="teamDescription">
                         </div>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-default">Create Team:</button>
+                            <button type="submit" class="btn btn-default">Create Team</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         </div>
                     </div>
