--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -31,6 +31,7 @@
                                 Wants To
                                 Chat</a>
                         </li>
+                        <a ng-if="invitations.length === 0">No notifications.</a>
                     </ul>
                 </li>
 
@@ -39,14 +40,14 @@
                             class="caret"></strong></a>
                     <ul class="dropdown-menu">
                         <li ng-repeat="invite in teaminvitations">
-                            <a ng-click="setCurrentInvite(invite)" data-toggle="modal" data-target="#invitationModal">{{invite.username}}
-                                Wants To
-                                Chat</a>
+                            <a ng-click="setCurrentTeamInvite(invite)" data-toggle="modal" data-target="#teamInvitationModal">{{invite.toUserName}}
+                                wants you to join team {{invite.teamName}}</a>
                         </li>
+                        <a ng-if="teaminvitations.length === 0">No invitations.</a>
                     </ul>
                 </li>
 
-                <li class="dropdown">
+                <li class=" dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Actions<strong
                             class="caret"></strong></a>
                     <ul class="dropdown-menu">
