--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -163,9 +163,9 @@
 
 
         <div class="row">
-
             <!-- Messages column -->
             <div class="col-md-6 col-md-offset-2">
+
                 <div class="row">
                     <div class="col-md-6">
                         <div class="page-header">
@@ -175,6 +175,38 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="row" ng-repeat="message in messages">
+
+                    <div ng-if="nameStartsWith(currentName, message.fromFirstName) == false" class="col-md-12 ">
+                        <div class="page-header message-header">
+                            <h1>{{message.fromFirstName}}
+                                <small>{{message.prettyTime}}</small>
+                            </h1>
+                        </div>
+                        <!--To: {{message.toFirstName}}-->
+                        <!--Timestamp: {{message.timeOfMessage}}-->
+                        {{message.message}}
+                        <div ng-if="message.fileName != 'null'">Attached Files: <a
+                                ng-attr-href="/user/download/file/?fileName={{message.fileName}}">{{message.fileName}}</a>
+                        </div>
+                    </div>
+
+                    <div ng-if="nameStartsWith(currentName, message.fromFirstName) == true"
+                         class="col-md-12 col-md-offset-6">
+                        <div class="page-header message-header">
+                            <h1>{{message.fromFirstName}}
+                                <small>{{message.prettyTime}}</small>
+                            </h1>
+                        </div>
+                        <!--To: {{message.toFirstName}}-->
+                        <!--Timestamp: {{message.timeOfMessage}}-->
+                        {{message.message}}
+                        <div ng-if="message.fileName != 'null'">Attached Files: <a
+                                ng-attr-href="/user/download/file/?fileName={{message.fileName}}">{{message.fileName}}</a>
+                        </div>
+                    </div>
+                </div> <!-- end message repeat -->
 
                 <!-- Messages exchanged between two users -->
                 <div class="row">
@@ -200,45 +232,8 @@
                     </div>
                 </div>
 
-                <!-- Send message -->
-                <div class="row" ng-repeat="message in messages">
-                    <div ng-if="nameStartsWith(currentName, message.fromFirstName) == false" class="col-md-12 ">
-                        <div class="page-header message-header">
-                            <h1>{{message.fromFirstName}}
-                                <small>{{message.prettyTime}}</small>
-                            </h1>
-                        </div>
-                        <!--To: {{message.toFirstName}}-->
-                        <!--Timestamp: {{message.timeOfMessage}}-->
-                        {{message.message}}
-                        <div ng-if="message.fileName != 'null'">Attached Files: <a
-                                ng-attr-href="/user/download/file/?fileName={{message.fileName}}">{{message.fileName}}</a>
-                        </div>
-                    </div>
-
-
-                    <div ng-if="nameStartsWith(currentName, message.fromFirstName) == true" class="col-md-12 col-md-offset-6">
-                        <div class="page-header message-header">
-                            <h1>{{message.fromFirstName}}
-                                <small>{{message.prettyTime}}</small>
-                            </h1>
-                        </div>
-                        <!--To: {{message.toFirstName}}-->
-                        <!--Timestamp: {{message.timeOfMessage}}-->
-                        {{message.message}}
-                        <div ng-if="message.fileName != 'null'">Attached Files: <a
-                                ng-attr-href="/user/download/file/?fileName={{message.fileName}}">{{message.fileName}}</a>
-                        </div>
-                    </div>
-
-
-
-
-                </div>
-            </div>
-            <!-- end Messages column -->
-
-        </div>
+            </div> <!-- end Messages column -->
+        </div> <!-- end row -->
     </div>
 </div>
 
