--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -177,30 +177,13 @@
                 </div>
 
                 <div class="row" ng-repeat="message in messages">
-
-                    <div ng-if="nameStartsWith(currentName, message.fromFirstName) == false" class="col-md-12 ">
+                    <div class="col-md-12"
+                         ng-class="{ 'col-md-offset-6' : nameStartsWith(currentName, message.fromFirstName) }">
                         <div class="page-header message-header">
                             <h1>{{message.fromFirstName}}
                                 <small>{{message.prettyTime}}</small>
                             </h1>
                         </div>
-                        <!--To: {{message.toFirstName}}-->
-                        <!--Timestamp: {{message.timeOfMessage}}-->
-                        {{message.message}}
-                        <div ng-if="message.fileName != 'null'">Attached Files: <a
-                                ng-attr-href="/user/download/file/?fileName={{message.fileName}}">{{message.fileName}}</a>
-                        </div>
-                    </div>
-
-                    <div ng-if="nameStartsWith(currentName, message.fromFirstName) == true"
-                         class="col-md-12 col-md-offset-6">
-                        <div class="page-header message-header">
-                            <h1>{{message.fromFirstName}}
-                                <small>{{message.prettyTime}}</small>
-                            </h1>
-                        </div>
-                        <!--To: {{message.toFirstName}}-->
-                        <!--Timestamp: {{message.timeOfMessage}}-->
                         {{message.message}}
                         <div ng-if="message.fileName != 'null'">Attached Files: <a
                                 ng-attr-href="/user/download/file/?fileName={{message.fileName}}">{{message.fileName}}</a>
