--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -169,16 +169,15 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="page-header">
-                            <h1>Name
-                                <small>Messages</small>
-                            </h1>
+                            <h1>Messages</h1>
                         </div>
                     </div>
                 </div>
 
                 <div class="row" ng-repeat="message in messages">
-                    <div class="col-md-12"
-                         ng-class="{ 'col-md-offset-6' : nameStartsWith(currentName, message.fromFirstName) }">
+                    <!-- Applies the offset class and sender-message class in case that the message is not from the current logged in user -->
+                    <div class="col-md-8"
+                         ng-class="{ 'col-md-offset-10 sender-message' : nameStartsWith(currentName, message.fromFirstName) }">
                         <div class="page-header message-header">
                             <h1>{{message.fromFirstName}}
                                 <small>{{message.prettyTime}}</small>
