--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -7,7 +7,7 @@
         <title th:text="'Hi ' + ${user.firstName}"></title>
     </head>
     <body>
-    <nav class="navbar navbar-default" role="navigation" xmlns="http://www.w3.org/1999/xhtml">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" xmlns="http://www.w3.org/1999/xhtml">
         <div class="navbar-header">
 
             <button type="button" class="navbar-toggle" data-toggle="collapse"
