--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -146,13 +146,25 @@ body {
    padding-right: 20px;
 }
 
-.sender-message {
+.message {
     border: 3px solid;
     padding-bottom: 15px;
-    border-top-left-radius: 3em;
-    border-bottom-left-radius: 3em;
-    border-color: greenyellow;
+    border-radius: 3em;
+    color: white;
+}
+
+.sender {
+    border-color: darkgreen;
+    background-color: darkgreen;
     text-align: right;
 }
 
+.receiver {
+    border-color: darkblue;
+    background-color: darkblue;
+    text-align: left;
+}
 
+.message-row {
+    margin: 5px;
+}
