--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -36,11 +36,13 @@
                 </li>
 
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-cloak>Team ({{teaminvitations.length}})<strong
-                            class="caret"></strong></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-cloak>Team
+                        ({{teaminvitations.length}})<strong
+                                class="caret"></strong></a>
                     <ul class="dropdown-menu">
                         <li ng-repeat="invite in teaminvitations">
-                            <a ng-click="setCurrentTeamInvite(invite)" data-toggle="modal" data-target="#teamInvitationModal">{{invite.toUserName}}
+                            <a ng-click="setCurrentTeamInvite(invite)" data-toggle="modal"
+                               data-target="#teamInvitationModal">{{invite.toUserName}}
                                 wants you to join team {{invite.teamName}}</a>
                         </li>
                         <a ng-if="teaminvitations.length === 0">No invitations.</a>
