--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -22,9 +22,9 @@
             <ul class="nav navbar-nav navbar-right">
 
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-cloak>Notifications
-                        ({{invitations.length}})<strong
-                                class="caret"></strong></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-cloak>Notifications <span
+                            class="badge">{{invitations.length}}</span><strong
+                            class="caret"></strong></a>
                     <ul class="dropdown-menu">
                         <li ng-repeat="invite in invitations">
                             <a ng-click="setCurrentInvite(invite)" data-toggle="modal" data-target="#invitationModal">{{invite.username}}
@@ -36,9 +36,8 @@
                 </li>
 
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-cloak>Team
-                        ({{teaminvitations.length}})<strong
-                                class="caret"></strong></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-cloak>Team <span class="badge">{{teaminvitations.length}}</span><strong
+                            class="caret"></strong></a>
                     <ul class="dropdown-menu">
                         <li ng-repeat="invite in teaminvitations">
                             <a ng-click="setCurrentTeamInvite(invite)" data-toggle="modal"
