--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -22,7 +22,7 @@
             <ul class="nav navbar-nav navbar-right">
 
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-cloak>Notifications <span
+                    <a href="#" class="dropdown-toggle white-text" data-toggle="dropdown" ng-cloak>Notifications <span
                             class="badge">{{invitations.length}}</span><strong
                             class="caret"></strong></a>
                     <ul class="dropdown-menu">
@@ -31,27 +31,33 @@
                                 Wants To
                                 Chat</a>
                         </li>
-                        <a ng-if="invitations.length === 0">No notifications.</a>
+                        <li ng-if="invitations.length === 0">
+                            <a data-toggle="modal">No notifications</a>
+                        </li>
                     </ul>
                 </li>
 
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-cloak>Team <span class="badge">{{teaminvitations.length}}</span><strong
+                    <a href="#" class="dropdown-toggle white-text" data-toggle="dropdown" ng-cloak>Team <span
+                            class="badge">{{teaminvitations.length}}</span><strong
                             class="caret"></strong></a>
                     <ul class="dropdown-menu">
                         <li ng-repeat="invite in teaminvitations">
-                            <a ng-click="setCurrentTeamInvite(invite)" data-toggle="modal" data-target="#teamInviteAcceptationModal">
+                            <a ng-click="setCurrentTeamInvite(invite)" data-toggle="modal"
+                               data-target="#teamInviteAcceptationModal">
                                 {{invite.fromUserName}} wants you to join team {{invite.teamName}}</a>
                             <a ng-click="setCurrentTeamInvite(invite)" data-toggle="modal"
                                data-target="#teamInvitationModal">{{invite.toUserName}}
                                 wants you to join team {{invite.teamName}}</a>
                         </li>
-                        <a ng-if="teaminvitations.length === 0">No invitations.</a>
+                        <li ng-if="teaminvitations.length === 0">
+                            <a data-toggle="modal">No invitations</a>
+                        </li>
                     </ul>
                 </li>
 
                 <li class=" dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Actions<strong
+                    <a href="#" class="dropdown-toggle white-text" data-toggle="dropdown">Actions<strong
                             class="caret"></strong></a>
                     <ul class="dropdown-menu">
                         <li>
@@ -76,7 +82,7 @@
 
 
                 <li>
-                    <a th:href="@{/logout}">Logout</a>
+                    <a class="white-text" th:href="@{/logout}">Logout</a>
                 </li>
 
 
