--- a/src/main/resources/templates/fragment/top.html
+++ b/src/main/resources/templates/fragment/top.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a th:href="@{/login}">Log In</a>
+                    <a class="white-text" th:href="@{/login}">Log In</a>
                 </li>
             </ul>
         </div>
